--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.6.0",
     "express-winston": "^4.2.0",
     "helmet": "^6.0.0",
     "joi": "^17.6.3",
