--- a/backend/.eslintrc
+++ b/backend/.eslintrc
@@ -2,7 +2,8 @@
   "extends": "airbnb-base",
   "rules": {
     "no-underscore-dangle": ["off", { "allow": ["_id"] }],
-    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }]
+    "no-unused-vars": ["error", { "argsIgnorePattern": "next" }],
+    "no-shadow": ["off", {"allow": ["card"]}]
   }
 }
 
